// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BetResultsInfo renders when previousRoundResults is null 1`] = `
<div
  className="BetResultsInfo-component"
>
  <div
    className="bet-info-table-title-container"
  >
    <div
      className="bet-info-table-title-text"
    >
      PREVIOUS ROUND RESULTS
    </div>
  </div>
  <table
    className="bet-results-info-table"
  >
    <tbody>
      <tr
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        <th>
          Bet Name
        </th>
        <th>
          Bet Amount
        </th>
        <th>
          Winnings
        </th>
        <th>
          Bet Returned
        </th>
      </tr>
      <tr
        style={
          Object {
            "height": "10px",
          }
        }
      />
      <tr>
        <td>
          TOTALS
        </td>
        <td>
          -
        </td>
        <td>
          -
        </td>
        <td>
          -
        </td>
      </tr>
      <tr
        style={
          Object {
            "height": "10px",
          }
        }
      />
      <tr
        className="balance-change-value"
      >
        <td>
          Starting
        </td>
        <td
          colSpan={3}
        >
          -
        </td>
      </tr>
      <tr
        className="balance-change-value"
      >
        <td>
          Net
        </td>
        <td
          colSpan={3}
        >
          -
        </td>
      </tr>
      <tr
        className="balance-change-value"
      >
        <td>
          Final
        </td>
        <td
          colSpan={3}
        >
          -
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`BetResultsInfo renders winning wheel numbers with different color backgrounds (0 -> green) 1`] = `
<div
  className="BetResultsInfo-component"
>
  <div
    className="bet-info-table-title-container"
  >
    <div
      className="bet-info-table-title-text"
    >
      PREVIOUS ROUND RESULTS
    </div>
  </div>
  <table
    className="bet-results-info-table"
  >
    <tbody>
      <tr
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        <th>
          Bet Name
        </th>
        <th>
          Bet Amount
        </th>
        <th>
          Winnings
        </th>
        <th>
          Bet Returned
        </th>
      </tr>
      <tr>
        <td>
          StraightUp_0
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr
        style={
          Object {
            "height": "10px",
          }
        }
      />
      <tr>
        <td>
          TOTALS
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr
        style={
          Object {
            "height": "10px",
          }
        }
      />
      <tr
        className="balance-change-value"
      >
        <td>
          Starting
        </td>
        <td
          colSpan={3}
        >
          $ -999
        </td>
      </tr>
      <tr
        className="balance-change-value"
      >
        <td>
          Net
        </td>
        <td
          colSpan={3}
        >
          $ 0
        </td>
      </tr>
      <tr
        className="balance-change-value"
      >
        <td>
          Final
        </td>
        <td
          colSpan={3}
        >
          $ -999
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`BetResultsInfo renders winning wheel numbers with different color backgrounds (1 -> red) 1`] = `
<div
  className="BetResultsInfo-component"
>
  <div
    className="bet-info-table-title-container"
  >
    <div
      className="bet-info-table-title-text"
    >
      PREVIOUS ROUND RESULTS
    </div>
  </div>
  <table
    className="bet-results-info-table"
  >
    <tbody>
      <tr
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        <th>
          Bet Name
        </th>
        <th>
          Bet Amount
        </th>
        <th>
          Winnings
        </th>
        <th>
          Bet Returned
        </th>
      </tr>
      <tr>
        <td>
          StraightUp_0
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr
        style={
          Object {
            "height": "10px",
          }
        }
      />
      <tr>
        <td>
          TOTALS
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr
        style={
          Object {
            "height": "10px",
          }
        }
      />
      <tr
        className="balance-change-value"
      >
        <td>
          Starting
        </td>
        <td
          colSpan={3}
        >
          $ -999
        </td>
      </tr>
      <tr
        className="balance-change-value"
      >
        <td>
          Net
        </td>
        <td
          colSpan={3}
        >
          $ 0
        </td>
      </tr>
      <tr
        className="balance-change-value"
      >
        <td>
          Final
        </td>
        <td
          colSpan={3}
        >
          $ -999
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`BetResultsInfo renders winning wheel numbers with different color backgrounds (2 -> black) 1`] = `
<div
  className="BetResultsInfo-component"
>
  <div
    className="bet-info-table-title-container"
  >
    <div
      className="bet-info-table-title-text"
    >
      PREVIOUS ROUND RESULTS
    </div>
  </div>
  <table
    className="bet-results-info-table"
  >
    <tbody>
      <tr
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        <th>
          Bet Name
        </th>
        <th>
          Bet Amount
        </th>
        <th>
          Winnings
        </th>
        <th>
          Bet Returned
        </th>
      </tr>
      <tr>
        <td>
          StraightUp_0
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr
        style={
          Object {
            "height": "10px",
          }
        }
      />
      <tr>
        <td>
          TOTALS
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr
        style={
          Object {
            "height": "10px",
          }
        }
      />
      <tr
        className="balance-change-value"
      >
        <td>
          Starting
        </td>
        <td
          colSpan={3}
        >
          $ -999
        </td>
      </tr>
      <tr
        className="balance-change-value"
      >
        <td>
          Net
        </td>
        <td
          colSpan={3}
        >
          $ 0
        </td>
      </tr>
      <tr
        className="balance-change-value"
      >
        <td>
          Final
        </td>
        <td
          colSpan={3}
        >
          $ -999
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`BetResultsInfo renders with bets 1`] = `
<div
  className="BetResultsInfo-component"
>
  <div
    className="bet-info-table-title-container"
  >
    <div
      className="bet-info-table-title-text"
    >
      PREVIOUS ROUND RESULTS
    </div>
  </div>
  <table
    className="bet-results-info-table"
  >
    <tbody>
      <tr
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        <th>
          Bet Name
        </th>
        <th>
          Bet Amount
        </th>
        <th>
          Winnings
        </th>
        <th>
          Bet Returned
        </th>
      </tr>
      <tr>
        <td>
          STRAIGHT_UP_0
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          STRAIGHT_UP_00
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          STRAIGHT_UP_1
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          STRAIGHT_UP_2
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          STRAIGHT_UP_3
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          STRAIGHT_UP_4
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          STRAIGHT_UP_5
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          STRAIGHT_UP_6
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          STRAIGHT_UP_7
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          STRAIGHT_UP_8
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          STRAIGHT_UP_9
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          STRAIGHT_UP_10
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          STRAIGHT_UP_11
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          STRAIGHT_UP_12
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          STRAIGHT_UP_13
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          STRAIGHT_UP_14
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          STRAIGHT_UP_15
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          STRAIGHT_UP_16
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          STRAIGHT_UP_17
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          STRAIGHT_UP_18
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          STRAIGHT_UP_19
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          STRAIGHT_UP_20
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          STRAIGHT_UP_21
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          STRAIGHT_UP_22
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          STRAIGHT_UP_23
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          STRAIGHT_UP_24
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          STRAIGHT_UP_25
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          STRAIGHT_UP_26
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          STRAIGHT_UP_27
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          STRAIGHT_UP_28
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          STRAIGHT_UP_29
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          STRAIGHT_UP_30
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          STRAIGHT_UP_31
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          STRAIGHT_UP_32
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          STRAIGHT_UP_33
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          STRAIGHT_UP_34
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          STRAIGHT_UP_35
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          STRAIGHT_UP_36
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          LOW_NUMBERS
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          HIGH_NUMBERS
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          EVEN
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          ODD
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          RED
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          BLACK
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          FIRST_DOZEN
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          SECOND_DOZEN
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          THIRD_DOZEN
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          FIRST_COLUMN
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          SECOND_COLUMN
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr>
        <td>
          THIRD_COLUMN
        </td>
        <td
          className="bet-results-info-table-bet-amount"
        >
          $ -999
        </td>
        <td>
          $ -999
        </td>
        <td>
          $ -999
        </td>
      </tr>
      <tr
        style={
          Object {
            "height": "10px",
          }
        }
      />
      <tr>
        <td>
          TOTALS
        </td>
        <td>
          $ -49950
        </td>
        <td>
          $ -49950
        </td>
        <td>
          $ -49950
        </td>
      </tr>
      <tr
        style={
          Object {
            "height": "10px",
          }
        }
      />
      <tr
        className="balance-change-value"
      >
        <td>
          Starting
        </td>
        <td
          colSpan={3}
        >
          $ 1000
        </td>
      </tr>
      <tr
        className="balance-change-value"
      >
        <td>
          Net
        </td>
        <td
          colSpan={3}
        >
          $ -14
        </td>
      </tr>
      <tr
        className="balance-change-value"
      >
        <td>
          Final
        </td>
        <td
          colSpan={3}
        >
          $ 986
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
